--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@800&display=swap" rel="stylesheet">
+  <script type="text/javascript" src="js-file.js"></script>
 </head>
 <body>
   <header>
@@ -23,7 +24,7 @@
         <a href="#">Projects</a>
         <p class="contact">CONTACT</p>
       </div>
-      <button class="hamburgar">
+      <button class="hamburger" onclick="openMenu()">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
