--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <div class="line"></div>
         <div class="line"></div>
       </button>
+      <div class="details-onclick" onclick="openMenu()">
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Projects</a>
+        <p class="contact">CONTACT</p>
+      </div>
     </div>
     <div class="header-text">
       <h1>WE ARE CREATIVES</h1>
