--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="line"></div>
         <div class="line"></div>
       </button>
-      <div class="details-onclick" onclick="openMenu()">
+      <div class="details-onclick">
         <a href="#">About</a>
         <a href="#">Services</a>
         <a href="#">Projects</a>
