--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@800&display=swap" rel="stylesheet">
-  <script type="text/javascript" src="js-file.js"></script>
+  <script type="text/javascript" src="js-file.js"></script> 
 </head>
 <body>
   <header>
@@ -29,7 +29,7 @@
         <div class="line"></div>
         <div class="line"></div>
       </button>
-      <div class="details-onclick">
+      <div class="details-onclick hide">
         <a href="#">About</a>
         <a href="#">Services</a>
         <a href="#">Projects</a>
