--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@800&display=swap" rel="stylesheet">
   <script type="text/javascript" src="js-file.js"></script> 
+  <script src="https://kit.fontawesome.com/8cb2bd51ed.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -111,10 +112,10 @@
         <p>Projects</p>
       </div>
       <div class="seventh-section-icons">
-        <img src="icon-facebook.svg"> 
-        <img src="icon-instagram.svg" style="color: black;">
-        <img src="icon-twitter.svg">
-        <img src="icon-pinterest.svg">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-pinterest"></i>
       </div>
     </div>
   </div>
